perses-results/1/jdk-bugs-removereplace/iter_12/PersesTempRoot_Main.java_run2.sh_20250814_131325_01/000000/compile_err.txt
./Main.java:92: error: type argument ? extends Function2<Character,Character,Character> is not within bounds of type-variable C
abstract class Mckenzie<J extends Mechanize<? extends Character, ? extends Function2<Character, Character, Character>, Character>>  {
                                                                 ^
  where C,L are type-variables:
    C extends Function2<L,? super L,? extends L> declared in class Mechanize
    L extends Object declared in class Mechanize
1 error
